# tradingBotFutures

./: README.md  pyproject.toml
src_dom_analyzer/: main_dom_analyzer.py
src_dom_analyzer/classes/: client_auth.py
src_dom_analyzer/legacy/: main_authentication_account.py  main_authentication_by_class.py
src_dom_analyzer/old_Nok/: NOK_main_collect_real_time_data.py
src_dom_analyzer/old_Nok/classes/: NOK_real_time_data_signalr.py
src_dom_analyzer/resources/: auth.json
src_tradingRiskManager/: main_app.py
src_tradingRiskManager/core/: execution.py
src_trm/adapters/: tradovate_api.py
src_trm/logging_package/: logs.txt
